Add website as submodule with branch

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = onvm
 	url = git@github.com:phil-lopreiato/openNetVM.git
 	branch = senior-design
+[submodule "website"]
+	path = website
+	url = git@github.com:gw-cs-sd/sd-2017-distributed-opennetvm.git
+	branch = gh-pages
